# AVLvsRedBlack

./: .gitignore  README.md
benchmark/: avl_deletion_time.csv  benchmark_results.csv  exec_time_avl.csv  exec_time_rbt.csv  final_benchmark_results.csv  rbt_deletion_time.csv  tree_benchmark_csv  tree_benchmark_csv.c  tree_benchmark_deletion_csv  tree_benchmark_deletion_csv.c  visualization.ipynb
debug/tmp/cmake/: avlTreeConfig.cmake
debug/tmp/include/: tree-avl.h
debug/tmp/share/pkgconfig/: tree-avl.pc  tree-rbt.pc
debug/tree-avl/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  test-tree-avl
debug/tree-rbt/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  rbtTreeConfig.cmake  test-tree-rbt  tree-rbt.pc
src/tree/: CMakeLists.txt  avlTreeConfig.cmake.in  test-tree-avl.c  tree-avl.c  tree-avl.h  tree-avl.pc.in
src/tree-avl/: CMakeLists.txt  avlTreeConfig.cmake.in  test-tree-avl.c  tree-avl.c  tree-avl.h  tree-avl.pc.in
src/tree-rbt/: CMakeLists.txt  min-max.h  test-tree-rbt.c  tree-rbt.c  tree-rbt.h
